CDAP-14095 Enable GC logging for Sandbox. Also do a heap dump on OOM.